Nuevo endpoint y rework de listar peticiones
Ahora el listar peticiones se hara mandando parametros por body tanto el id de la sucursal como el estado de peticion de las cuales se quieren listar, ademas agregado nuevo endpoint, actualizar peticiones de entradas todo modificado en ruta, swagger y controlador
